--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,12 @@ body {
   text-align: center;
   background-color: #1e1e1e;
   color: #f5f5f5;
+  background-image: url('kuh.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  min-height: 100vh;
 }
 
 input, select {
